--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h2>Calculadora de Rendimento - CDB<i class="bi bi-calculator"></i></h2>
     <br>
 
+    <!-- Input Valor -->
     <div class="mb-3">
       <label for="valor" class="form-label">Valor Investido (R$):</label>
       <div class="input-group">
@@ -25,6 +26,7 @@
       </div>
     </div>
 
+    <!-- Input Taxa anual -->
     <div class="mb-3">
       <label class="form-label" for="taxaAnual">Taxa Anual (%):</label>
       <div class="input-group">
@@ -33,7 +35,7 @@
       </div>
     </div>
 
-
+    <!-- Input Porcentagem da taxa -->
     <div class="mb-3">
       <label class="form-label" for="porcentagem">Porcentagem do CDI (%):</label>
       <div class="input-group">
@@ -41,6 +43,8 @@
         <span class="input-group-text" id="basic-addon3">%</span>
       </div>
     </div>
+
+    <!-- Select Tipo de periodo -->
     <div class="mb-3">
       <label class="form-label" for="periodo">Tipo de Período:</label>
       <select class="form-select" id="periodo">
@@ -49,12 +53,21 @@
         <option value="anual">Anual</option>
       </select>
     </div>
+
+    <!-- Quantidade de periodos -->
     <div class="mb-3">
       <label class="form-label" for="periodo_quant" id="periodo_qL">Quantidade de Dias:</label>
       <input class="form-control" type="number" id="periodo_quant" step="0" value="1">
     </div>
+
+    <!-- Quantidade de dias corridos -->
+    <div class="mb-3" id="Div_diasCorridos">
+      <label class="form-label" for="I_diasCorridos" id="periodo_qL">Quantidade de Dias Corridos:</label>
+      <input class="form-control" type="number" id="I_diasCorridos" step="0" value="1">
+    </div>
     <hr>
 
+    <!-- ############### RESULTADOS ############## -->
     <!-- Rendimento Bruto-->
     <p class="mb-0">Rendimento Bruto</p>
     <div class="progress position-relative mb-3 bg-dark" style="height: 30px;">
